# messages-api-gateway

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  run.sh
.sqlx/: query-03cba15cfb6884a8b8f0e276e9cafed003c5c66be9de2349e1225ed7aa702199.json  query-0dfd719b79a0a3e10842b3e6c8666a0a04a7128a84c5b1157ca8d6698a47127e.json  query-0e8f9952c54e26c8e0b64521e0e6a7a879e7ba796f742739720e46a3012a3654.json  query-29017da2bad01f6a62d18c0acc85a32cd7432ab543513605349f91f41784d5e2.json  query-54ff55dc5754bdbb0f253289e050f7f240703b91a52a854df7c9cfc1af35b264.json  query-65e2038d5d21e16fbbc62ac7fc55489ec5af2d48210da6ddaf94b1f56114ed2b.json  query-70f0d97c96d5035f2d690bb543b8e217da7b9075a691de0000e4b9d2e11c3fd5.json  query-7e739ee955a8bf21df35f3e22bc5111bfc8d82a38c9fd19b5cd25cbb46c04d18.json  query-884f13552e4bf10b8c6c98c75d07724a780b77ff047220041be41108ab1a4cb3.json  query-8ee65503873315e0cc00fc929ca0f2cc46fc287f6103a7b4fa0ee16ad9e7e1b3.json  query-b300cb7d1caa9ee29c6ccca17835b24714aebc5b1f8f0d0fb1689d0b21dfb20b.json
migrations/: 001_initial.sql
src/: error.rs  lib.rs  main.rs
src/api/: handlers.rs  middleware.rs  mod.rs  server.rs
src/config/: mod.rs
src/dto/: mod.rs
src/models/: email.rs
src/services/: mod.rs  producer.rs  scheduler.rs
